--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 12 00:05:05 2018</p>
+         Last Run: Mon Nov 12 01:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -33,12 +33,12 @@
                         <td>Partly Cloudy</td>
                         <td>1</td>
                         <td>-3</td>
-                        <td>6</td>
-                        <td>74</td>
+                        <td>5</td>
+                        <td>75</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>W</td>
-                        <td>40</td>
+                        <td>54</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -50,19 +50,19 @@
                         <td>0</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>33</td>
+                        <td>39</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>0</td>
                         <td>-4</td>
-                        <td>6</td>
+                        <td>5</td>
                         <td>74</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>29</td>
+                        <td>30</td>
                      </tr>
                   </tbody>
                </table>
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "6",
                  "5",
-                 "6"
+                 "5",
+                 "5"
                ]
              },
              {
@@ -171,7 +171,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "74",
+                 "75",
                  "73",
                  "74"
                ]
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "40",
-                 "33",
-                 "29"
+                 "54",
+                 "39",
+                 "30"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 12 00:05:05 2018</p>
+         Last Run: Mon Nov 12 01:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -245,51 +245,51 @@
                   <tbody>
                      <tr>
                         <td>08:00 AM</td>
-                        <td>Partly Cloudy</td>
-                        <td>-8</td>
-                        <td>-12</td>
-                        <td>6</td>
-                        <td>84</td>
+                        <td>Clear</td>
+                        <td>-9</td>
+                        <td>-13</td>
+                        <td>5</td>
+                        <td>83</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>31</td>
+                        <td>29</td>
                      </tr>
                      <tr>
                         <td>09:00 AM</td>
                         <td>Clear</td>
                         <td>-6</td>
                         <td>-10</td>
-                        <td>5</td>
-                        <td>76</td>
+                        <td>4</td>
+                        <td>73</td>
                         <td>0</td>
-                        <td>8</td>
-                        <td>SSW</td>
-                        <td>23</td>
+                        <td>10</td>
+                        <td>SW</td>
+                        <td>28</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
-                        <td>-4</td>
-                        <td>-8</td>
-                        <td>5</td>
-                        <td>67</td>
+                        <td>-3</td>
+                        <td>-7</td>
+                        <td>3</td>
+                        <td>64</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>SW</td>
-                        <td>16</td>
+                        <td>WSW</td>
+                        <td>24</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>-2</td>
-                        <td>-6</td>
-                        <td>5</td>
-                        <td>61</td>
+                        <td>-1</td>
+                        <td>-5</td>
+                        <td>3</td>
+                        <td>57</td>
                         <td>1</td>
-                        <td>10</td>
-                        <td>SW</td>
-                        <td>12</td>
+                        <td>11</td>
+                        <td>WSW</td>
+                        <td>23</td>
                      </tr>
                   </tbody>
                </table>
@@ -317,10 +317,10 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-12",
+                 "-13",
                  "-10",
-                 "-8",
-                 "-6"
+                 "-7",
+                 "-5"
                ]
              },
              {
@@ -330,10 +330,10 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-8",
+                 "-9",
                  "-6",
-                 "-4",
-                 "-2"
+                 "-3",
+                 "-1"
                ]
              }
            ]
@@ -391,10 +391,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "6",
                  "5",
-                 "5",
-                 "5"
+                 "4",
+                 "3",
+                 "3"
                ]
              },
              {
@@ -403,10 +403,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "84",
-                 "76",
-                 "67",
-                 "61"
+                 "83",
+                 "73",
+                 "64",
+                 "57"
                ]
              },
              {
@@ -415,10 +415,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "31",
-                 "23",
-                 "16",
-                 "12"
+                 "29",
+                 "28",
+                 "24",
+                 "23"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 12 00:05:05 2018</p>
+         Last Run: Mon Nov 12 01:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -480,38 +480,38 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>4</td>
-                        <td>1</td>
-                        <td>4</td>
-                        <td>54</td>
+                        <td>5</td>
+                        <td>2</td>
+                        <td>3</td>
+                        <td>50</td>
                         <td>1</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>50</td>
+                        <td>45</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>5</td>
-                        <td>2</td>
-                        <td>4</td>
-                        <td>53</td>
-                        <td>1</td>
-                        <td>13</td>
-                        <td>W</td>
+                        <td>6</td>
+                        <td>3</td>
+                        <td>3</td>
                         <td>49</td>
+                        <td>1</td>
+                        <td>14</td>
+                        <td>W</td>
+                        <td>46</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>5</td>
-                        <td>2</td>
+                        <td>6</td>
                         <td>3</td>
-                        <td>52</td>
+                        <td>3</td>
+                        <td>49</td>
                         <td>1</td>
                         <td>13</td>
                         <td>WNW</td>
-                        <td>47</td>
+                        <td>48</td>
                      </tr>
                   </tbody>
                </table>
@@ -538,9 +538,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "1",
                  "2",
-                 "2"
+                 "3",
+                 "3"
                ]
              },
              {
@@ -550,9 +550,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "4",
                  "5",
-                 "5"
+                 "6",
+                 "6"
                ]
              }
            ]
@@ -609,8 +609,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "4",
-                 "4",
+                 "3",
+                 "3",
                  "3"
                ]
              },
@@ -620,9 +620,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "54",
-                 "53",
-                 "52"
+                 "50",
+                 "49",
+                 "49"
                ]
              },
              {
@@ -631,9 +631,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "50",
-                 "49",
-                 "47"
+                 "45",
+                 "46",
+                 "48"
                ]
              }
            ]
