--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 12 03:05:03 2018</p>
+         Last Run: Mon Nov 12 04:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>1</td>
                         <td>-3</td>
                         <td>5</td>
-                        <td>76</td>
+                        <td>71</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>W</td>
-                        <td>50</td>
+                        <td>47</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -46,23 +46,23 @@
                         <td>0</td>
                         <td>-4</td>
                         <td>5</td>
-                        <td>74</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>37</td>
+                        <td>35</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>-1</td>
-                        <td>-5</td>
-                        <td>5</td>
-                        <td>75</td>
+                        <td>Clear</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>-4</td>
+                        <td>5</td>
+                        <td>72</td>
+                        <td>0</td>
+                        <td>13</td>
                         <td>W</td>
-                        <td>30</td>
+                        <td>27</td>
                      </tr>
                   </tbody>
                </table>
@@ -91,7 +91,7 @@
                "data":[
                  "-3",
                  "-4",
-                 "-5"
+                 "-4"
                ]
              },
              {
@@ -103,7 +103,7 @@
                "data":[
                  "1",
                  "0",
-                 "-1"
+                 "0"
                ]
              }
            ]
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "76",
-                 "74",
-                 "75"
+                 "71",
+                 "70",
+                 "72"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "50",
-                 "37",
-                 "30"
+                 "47",
+                 "35",
+                 "27"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 12 03:05:03 2018</p>
+         Last Run: Mon Nov 12 04:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -261,7 +261,7 @@
                         <td>-6</td>
                         <td>-10</td>
                         <td>4</td>
-                        <td>73</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
@@ -404,7 +404,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "83",
-                 "73",
+                 "74",
                  "65",
                  "58"
                ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 12 03:05:03 2018</p>
+         Last Run: Mon Nov 12 04:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -507,11 +507,11 @@
                         <td>5</td>
                         <td>2</td>
                         <td>3</td>
-                        <td>51</td>
+                        <td>52</td>
                         <td>1</td>
                         <td>13</td>
                         <td>WNW</td>
-                        <td>48</td>
+                        <td>47</td>
                      </tr>
                   </tbody>
                </table>
@@ -622,7 +622,7 @@
                "data":[
                  "52",
                  "52",
-                 "51"
+                 "52"
                ]
              },
              {
@@ -633,7 +633,7 @@
                "data":[
                  "47",
                  "47",
-                 "48"
+                 "47"
                ]
              }
            ]
