--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 12 05:05:02 2018</p>
+         Last Run: Mon Nov 12 06:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -30,7 +30,7 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>1</td>
                         <td>-3</td>
                         <td>5</td>
@@ -38,31 +38,31 @@
                         <td>0</td>
                         <td>14</td>
                         <td>W</td>
-                        <td>47</td>
+                        <td>26</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>0</td>
                         <td>-4</td>
                         <td>5</td>
-                        <td>70</td>
+                        <td>71</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>W</td>
-                        <td>34</td>
+                        <td>17</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
-                        <td>-1</td>
-                        <td>-5</td>
-                        <td>5</td>
+                        <td>0</td>
+                        <td>-4</td>
+                        <td>6</td>
                         <td>72</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>W</td>
-                        <td>27</td>
+                        <td>13</td>
                      </tr>
                   </tbody>
                </table>
@@ -91,7 +91,7 @@
                "data":[
                  "-3",
                  "-4",
-                 "-5"
+                 "-4"
                ]
              },
              {
@@ -103,7 +103,7 @@
                "data":[
                  "1",
                  "0",
-                 "-1"
+                 "0"
                ]
              }
            ]
@@ -162,7 +162,7 @@
                "data":[
                  "5",
                  "5",
-                 "5"
+                 "6"
                ]
              },
              {
@@ -172,7 +172,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "71",
-                 "70",
+                 "71",
                  "72"
                ]
              },
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "47",
-                 "34",
-                 "27"
+                 "26",
+                 "17",
+                 "13"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 12 05:05:02 2018</p>
+         Last Run: Mon Nov 12 06:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -249,11 +249,11 @@
                         <td>-9</td>
                         <td>-13</td>
                         <td>5</td>
-                        <td>83</td>
+                        <td>84</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>28</td>
+                        <td>25</td>
                      </tr>
                      <tr>
                         <td>09:00 AM</td>
@@ -261,11 +261,11 @@
                         <td>-6</td>
                         <td>-10</td>
                         <td>4</td>
-                        <td>74</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>SW</td>
-                        <td>28</td>
+                        <td>SSW</td>
+                        <td>26</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
@@ -273,11 +273,11 @@
                         <td>-4</td>
                         <td>-8</td>
                         <td>3</td>
-                        <td>65</td>
+                        <td>67</td>
                         <td>0</td>
-                        <td>10</td>
-                        <td>WSW</td>
-                        <td>25</td>
+                        <td>11</td>
+                        <td>SW</td>
+                        <td>26</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -285,11 +285,11 @@
                         <td>-1</td>
                         <td>-5</td>
                         <td>3</td>
-                        <td>58</td>
+                        <td>60</td>
                         <td>1</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>24</td>
+                        <td>27</td>
                      </tr>
                   </tbody>
                </table>
@@ -403,10 +403,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "83",
-                 "74",
-                 "65",
-                 "58"
+                 "84",
+                 "75",
+                 "67",
+                 "60"
                ]
              },
              {
@@ -415,10 +415,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "28",
-                 "28",
                  "25",
-                 "24"
+                 "26",
+                 "26",
+                 "27"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 12 05:05:02 2018</p>
+         Last Run: Mon Nov 12 06:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -480,10 +480,10 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>5</td>
-                        <td>2</td>
+                        <td>4</td>
+                        <td>1</td>
                         <td>3</td>
-                        <td>52</td>
+                        <td>56</td>
                         <td>1</td>
                         <td>13</td>
                         <td>W</td>
@@ -495,23 +495,23 @@
                         <td>5</td>
                         <td>2</td>
                         <td>3</td>
-                        <td>52</td>
+                        <td>55</td>
                         <td>1</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>47</td>
+                        <td>51</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>5</td>
                         <td>2</td>
-                        <td>3</td>
-                        <td>52</td>
+                        <td>2</td>
+                        <td>54</td>
                         <td>1</td>
                         <td>13</td>
                         <td>WNW</td>
-                        <td>47</td>
+                        <td>54</td>
                      </tr>
                   </tbody>
                </table>
@@ -538,7 +538,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "2",
+                 "1",
                  "2",
                  "2"
                ]
@@ -550,7 +550,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "5",
+                 "4",
                  "5",
                  "5"
                ]
@@ -611,7 +611,7 @@
                "data":[
                  "3",
                  "3",
-                 "3"
+                 "2"
                ]
              },
              {
@@ -620,9 +620,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "52",
-                 "52",
-                 "52"
+                 "56",
+                 "55",
+                 "54"
                ]
              },
              {
@@ -632,8 +632,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "47",
-                 "47",
-                 "47"
+                 "51",
+                 "54"
                ]
              }
            ]
